<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".maj_d">


    <TextView
        android:id="@+id/maj_d_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/intut"
        android:text="@string/M_d"
        android:textColor="#000000"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/d"
        app:layout_constraintEnd_toEndOf="@+id/e"
        app:layout_constraintStart_toStartOf="@+id/d"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_d"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/fs"
        app:layout_constraintEnd_toEndOf="@+id/g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_e"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/g"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_fs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_g"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_a"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/g"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_b"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/g"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/MD_cCs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/g"
        app:layout_constraintTop_toTopOf="@+id/g"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>