<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".min_cs">


    <TextView
        android:id="@+id/min_cs_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/intut"
        android:text="@string/m_cs"
        android:textColor="#000000"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_cs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/e"
        app:layout_constraintEnd_toEndOf="@+id/fs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_dDs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/gs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cs"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_e"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_fs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/gs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_gs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fs"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_a"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/e"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_theme"
        android:fontFamily="@font/intut"
        android:text="@string/mcs_b"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a"
        app:layout_constraintTop_toTopOf="@+id/gs"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>